Absolute pain and suffering (1.20.5-6) (Codecification and Componentification)